[tool.poetry]
name = "raggamuffin"
version = "0.1.0"
description = ""
authors = ["handriamaromanana <hugo.andriamaromanana@volta-medical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
